--- a/mongo-cards/public/index.html
+++ b/mongo-cards/public/index.html
@@ -9,7 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-    <script src="javascripts/comments.js"></script>
+    <script src="javascripts/main.js"></script>
     <link rel="stylesheet" href="stylesheets/style.css">
 </head>
 
@@ -18,15 +18,13 @@
 
     <form id="commentForm" action="">
         <div class="form-group">
-        <label for="name" style="font-weight: bold; font-size: 2em">Name: </label><input class="form-control" type="text" id="name" placeholder="Name">
+        <label for="name" style="font-weight: bold; font-size: 2em">Card Name: </label><input class="form-control" type="text" id="name" placeholder="Name">
         </div>
         <div class="form-group">
-        <label for="comment" style="font-weight: bold; font-size: 2em">Comment: </label><input class="form-control" type="text" id="comment" placeholder="Comment">
+        <label for="name" style="font-weight: bold; font-size: 2em">Picture URL: </label><input class="form-control" type="text" id="name" placeholder="URL">
         </div>
-    </form>
-    <form id="queryForm" action="">
-        <div class="from-group">
-        <label for="name" style="font-weight: bold; font-size: 2em">Name For Query (Optional): </label><input class="form-control" type="text" id="query" placeholder="Query"><br>
+        <div class="form-group">
+        <label for="name" style="font-weight: bold; font-size: 2em">Description: </label><input class="form-control" type="text" id="name" placeholder="Description">
         </div>
     </form>
     <button id="postComment" class="btn btn-default">Post Comment</button>
