--- a/mongo-cards/public/index.html
+++ b/mongo-cards/public/index.html
@@ -21,18 +21,23 @@
         <label for="name" style="font-weight: bold; font-size: 2em">Card Name: </label><input class="form-control" type="text" id="name" placeholder="Name">
         </div>
         <div class="form-group">
-        <label for="name" style="font-weight: bold; font-size: 2em">Picture URL: </label><input class="form-control" type="text" id="name" placeholder="URL">
+        <label for="picture" style="font-weight: bold; font-size: 2em">Picture URL: </label><input class="form-control" type="text" id="picture" placeholder="URL">
         </div>
         <div class="form-group">
-        <label for="name" style="font-weight: bold; font-size: 2em">Description: </label><input class="form-control" type="text" id="name" placeholder="Description">
+        <label for="description" style="font-weight: bold; font-size: 2em">Description: </label><input class="form-control" type="text" id="description" placeholder="Description">
+        </div>
+        <div class="form-group">
+        <label for="element" style="font-weight: bold; font-size: 2em">Element: </label><input class="form-control" type="text" id="element" placeholder="Element">
+        </div>
+        <div class="form-group">
+        <label for="attack" style="font-weight: bold; font-size: 2em">Attack: </label><input class="form-control" type="text" id="attack" placeholder="Attack">
+        </div>
+        <div class="form-group">
+        <label for="defense" style="font-weight: bold; font-size: 2em">Defense: </label><input class="form-control" type="text" id="defense" placeholder="Defense">
         </div>
     </form>
-    <button id="postComment" class="btn btn-default">Post Comment</button>
-    <button id="getComments" class="btn btn-default">Get Comments</button>
-    <button id="deleteComments" class="btn btn-default">Delete All</button>
-    <div id="json"></div>
-    <div id="done"></div>
-    <div id="comments"></div>
+    <button id="postCard" class="btn btn-default">Create Card</button>
+    <div id="cards"></div>
     
 </body>
 
