--- a/mongo-cards/public/index.html
+++ b/mongo-cards/public/index.html
@@ -24,20 +24,26 @@
             <label for="picture" style="font-weight: bold; font-size: 2em">Picture URL: </label><input class="form-control" type="text" id="picture" placeholder="URL">
         </div>
         <div class="form-group">
-            <label for="description" style="font-weight: bold; font-size: 2em">Description: </label><input class="form-control" type="text" id="description" placeholder="Description">
+            <label style="font-weight: bold; font-size: 2em">Element: </label>
         </div>
-        <select id="element" size="1">
+        <select id="element" size="1">  
+        
             <option value="default" selected="selected">Default</option>
             <option value="fire">Fire</option>
             <option value="earth">Earth</option>
             <option value="water">Water</option>
             <option value="wind">Wind</option>
         </select>
+
         <div class="form-group">
-            <label for="attack" style="font-weight: bold; font-size: 2em">Attack: </label><input class="form-control" type="text" id="attack" placeholder="Attack">
+            <label for="description" style="font-weight: bold; font-size: 2em">Description: </label><input class="form-control" type="text" id="description" placeholder="Description">
+        </div>
+
+        <div class="form-group">
+            <label for="attack" style="font-weight: bold; font-size: 2em">Attack: </label><input class="form-control" type="text" id="attack" placeholder="Attack... 1-10">
         </div>
         <div class="form-group">
-            <label for="defense" style="font-weight: bold; font-size: 2em">Defense: </label><input class="form-control" type="text" id="defense" placeholder="Defense">
+            <label for="defense" style="font-weight: bold; font-size: 2em">Defense: </label><input class="form-control" type="text" id="defense" placeholder="Defense... 1-10">
         </div>
         <div class="form-group">
             <label for="query" style="font-weight: bold; font-size: 2em">Card Lookup (Optional): </label><input class="form-control" type="text" id="query" placeholder="Card Lookup">
