--- a/mongo-cards/public/index.html
+++ b/mongo-cards/public/index.html
@@ -46,12 +46,12 @@
             <label for="defense" style="font-weight: bold; font-size: 2em">Defense: </label><input class="form-control" type="text" id="defense" placeholder="Defense... 1-10">
         </div>
         <div class="form-group">
-            <label for="query" style="font-weight: bold; font-size: 2em">Card Lookup (Optional): </label><input class="form-control" type="text" id="query" placeholder="Card Lookup">
+            <label for="query" style="font-weight: bold; font-size: 2em">Card Lookup: (Optional) </label><input class="form-control" type="text" id="query" placeholder="Card Name...">
         </div>
     </form>
     <button id="postCard" class="btn btn-default">Create Card</button>
     <button id="getCards" class="btn btn-default">Get Cards</button>
-    <button id="deleteCards" class="btn btn-default">Delete Cards</button>
+    <!--<button id="deleteCards" class="btn btn-default">Delete Cards</button>-->
     <div id="cards"></div>
 
 </body>
